--- a/management-report/markdown/subpage-demographics.Rmd
+++ b/management-report/markdown/subpage-demographics.Rmd
@@ -1,146 +1,3 @@
----
-title: "DEMOGRAPHICS DRAFT"
-output: 
-  flexdashboard::flex_dashboard:
-    logo: phs-logo.png
-    orientation: rows
-    vertical_layout: scroll
----
-
-```{r load-setup, include=FALSE}
-source(here::here("code", "00_setup-environment.R"))
-library(crosstalk) # for drop down menus
-library(htmltools)
-
-
-# Write numbers with thousands separator
-knit_hooks$set(inline = function(x){
-  if(!is.character(x)){prettyNum(x, big.mark=",")}else{x}
-})
-```
-
----
-date: "`r paste('Data as at', format(end_date, '%d %B %Y'))`"
----
-
-```{r setup, include=FALSE}
-
-# Load functions
-walk(dir(here::here("functions"), full.names = TRUE), source)
-
-
-# Load PDS data
-pds <- read_rds(get_mi_data_path("final_data", ext = "rds", test_output = test_output)) %>% 
-  
-  # Remove codes from board and IJB
-  mutate(health_board = str_sub(health_board, 3, -1),
-         ijb          = if_else(is.na(ijb),
-                                "Unknown",
-                                str_sub(ijb, 11, -1)))
-
-# Load expected diagnoses reference file
-exp <- read_csv(get_exp_diagnoses_path())
-
-
-# Load error summary
-err <- read_rds(get_mi_data_path("error_data", ext = "rds", test_output = test_output)) %>% 
-
-  mutate(ijb = if_else(is.na(ijb),
-                                "Unknown",
-                                str_sub(ijb, 11, -1)))
-
-# calculate referrals for Scotland and health boards
-pds_ijb <- pds %>% arrange(ijb)
-
-pds_ijb %<>% rename(geog = ijb) 
-
-pds_ijb$geog<- factor(pds_ijb$geog, levels = unique(pds_ijb$geog))
-
-pds_scot <- pds %>% group_by(health_board = "Scotland", ijb = "Scotland", fy, month, ldp_full, ldp, age_grp_2, age_grp, simd, sex) %>%  summarise(referrals = sum(referrals), .groups = "drop")
-
-pds_scot %<>% rename(geog = ijb) 
-
-pds_scot$geog<- factor(pds_scot$geog, levels = unique(pds_scot$geog))
-
-pds_hb <- pds %>% group_by(health_board, fy, month, ldp_full, ldp, age_grp_2, age_grp, simd, sex) %>% 
-  summarise(referrals = sum(referrals), .groups = "drop") %>% mutate(ijb = health_board, .before = fy)
-
-pds_hb %<>% rename(geog = ijb) 
-
-pds_hb$geog<- factor(pds_hb$geog, levels = unique(pds_hb$geog))
-
-# combine data for ijb, hb and Scotland
-pds_all <- bind_rows(pds_scot, pds_ijb, pds_hb)
-
-pds_all$geog<- factor(pds_all$geog, levels = unique(pds_all$geog))
-
-#get totals for all geogs, hbs, ijbs, scotland
-pds_all_totals <- pds_all %>% group_by(geog, fy, age_grp_2 = "All") %>% summarise(total_referrals = sum(referrals))
-
-pds_ijb_totals <- pds_ijb %>% group_by(geog, fy, age_grp_2 = "All") %>% summarise(total_referrals = sum(referrals))
-
-pds_hb_totals <- pds_hb %>% group_by(geog, fy, age_grp_2 = "All") %>% summarise(total_referrals = sum(referrals))
-
-pds_scot_totals <- pds_scot %>% group_by(geog, fy, age_grp_2 = "All") %>% summarise(total_referrals = sum(referrals))
-
-
-#get totals for all geogs, hbs, ijbs, scotland with LARGE AGE GROUPS
-pds_all_totals_2 <- bind_rows(pds_all_totals,
-  pds_all %>% filter(age_grp_2 != "Unknown") %>% group_by(geog, fy, age_grp_2) %>% summarise(total_referrals = sum(referrals))
-)
-
-pds_all_totals_2$age_grp_2<- factor(pds_all_totals_2$age_grp_2, levels = c("All", "79 and Under", "80 to 84", "85+"))
-
-pds_ijb_totals_2 <- bind_rows(pds_ijb_totals,
-    pds_ijb %>% filter(age_grp_2 != "Unknown") %>% group_by(geog, fy, age_grp_2) %>% summarise(total_referrals = sum(referrals))
-)
-
-pds_ijb_totals_2$age_grp_2<- factor(pds_ijb_totals_2$age_grp_2, levels = c("All", "79 and Under", "80 to 84", "85+"))
-
-
-pds_hb_totals_2 <- bind_rows(pds_hb_totals,
-    pds_hb %>% filter(age_grp_2 != "Unknown") %>% group_by(geog, fy, age_grp_2) %>% summarise(total_referrals = sum(referrals))
-)
-
-pds_hb_totals_2$age_grp_2<- factor(pds_hb_totals_2$age_grp_2, levels = c("All", "79 and Under", "80 to 84", "85+"))
-
-
-pds_scot_totals_2 <- bind_rows(pds_scot_totals,
-    pds_scot %>% filter(age_grp_2 != "Unknown") %>% group_by(geog, fy, age_grp_2) %>% summarise(total_referrals = sum(referrals))
-)
-
-pds_scot_totals_2$age_grp_2<- factor(pds_scot_totals_2$age_grp_2, levels = c("All", "79 and Under", "80 to 84", "85+"))
-
-#load population rates data
-pop_data <- read_rds("//conf/dementia/A&I/Outputs/management-report/lookups/pop_data.rds")
-
-#create year lists
-provisional_year <- paste0(as.numeric(substr(last(finalised_years),1,4)) + 1,
-                           "/", as.numeric(substr(last(finalised_years),6,7)) + 1)
-
-current_fy <- paste0(substr(fy,1,4),
-                           "/", as.numeric(substr(fy,3,4)) + 1)
-
-last_full_year <- if_else(qt == 4, current_fy, paste0(as.numeric(substr(fy,1,4)) - 1,
-                           "/", as.numeric(substr(fy,3,4))))
-
-all_years <- unique(pds_all$fy)
-
-if(qt == 4){full_years = all_years}else{full_years = all_years[-length(all_years)]}
-
-
-```
-
-<script>
-
-var pds_year = "`r current_fy`";
-
-var ldp_year = "`r last_full_year`";
-
-</script>
-
-<!-- delete all of above when finished testing -->
-
 Age Groups {data-navmenu="Demographics"}
 =================================================
 
@@ -344,18 +201,23 @@ The Trend tab shows the trend of the rate by financial year for Scotland and the
 
 `r if(qt != 4) {div(style = css(fontStyle="italic"),paste0("For diagnoses in financial year ", current_fy, " data is available up to and including Q", qt, "."))}`
 
-Row {.tabset data-height=1110}
+Row {.tabset data-height=1180}
 ----------------------------------------------------------------------
 
 ### **Integration Authority Areas**
 
 ```{r dropdown-ijb-age-pop}
+#filter for authority areas
 pds_ijb_age_rates <- pds_all_age_rates %>% filter(!grepl("NHS", geog)) %>% 
+#age_grp_2_group is for use with age group dropdown below which has been removed in current version
          mutate(age_grp_2_group = "All", .before = age_grp_2)  %>% 
+#create key for connecting dropdown to plot and table
          mutate(key = paste0(fy,age_grp_2_group,geog), .before = geog)
 
+#create sharedData object for dropdown menu
 pds_pop_age_data_ijb <- SharedData$new(pds_ijb_age_rates, key = ~key, group = "ijb_age_pop")
 
+#create dropdown menu for selecting financial year
 data_filter_ijb_age_pop <- filter_select(id = "filter_ijb_age_pop",
                                     label = "Select Financial Year:",
                                     group = ~fy,
@@ -363,21 +225,21 @@ data_filter_ijb_age_pop <- filter_select(id = "filter_ijb_age_pop",
                                     multiple = FALSE
                                       )
 
-
-# data_filter_ijb_age_pop_quintile <- filter_select(id = "filter_ijb_age_pop_quintile",
+## filter for selecting age group (removed in current version) 
+# data_filter_ijb_age_group <- filter_select(id = "filter_ijb_age_group",
 #                                     label = "Select Age Group:",
 #                                     group = ~age_grp_2_group,
 #                                     sharedData = pds_pop_age_data_ijb,
 #                                     multiple = FALSE)
   
-
+#create dropdown menu for selecting authority area
 data_filter_ijb_age_pop_geog <- filter_select(id = "filter_ijb_age_pop_geog",
                                     label = "Select Integration Authority Area(s):",
                                     group = ~geog,
                                     sharedData = pds_pop_age_data_ijb,
                                     multiple = TRUE
                                       )
-
+#place dropdown menus in columns and set size
 bscols(widths = c(1,5,NA),
        NULL,
        data_filter_ijb_age_pop,
@@ -397,7 +259,7 @@ plot_ly(pds_pop_age_data_ijb, x = ~geog, y = ~pop_rate_10000, meta = ~fy, hovert
   layout(clickmode = "none", 
          showlegend = TRUE, legend = list(orientation = 'h', x = 0.5, y = 100, xanchor = "center"),
          margin = list(l = -5, b = 10, t = 40),
-         xaxis = list(title = "Integration Authority Area", showline = FALSE, linecolor = "#b3b3b3",
+         xaxis = list(title = "", showline = FALSE, linecolor = "#b3b3b3",
                       categoryorder = "trace", tickangle = -45, titlefont = list(size = 16)),
          yaxis = list(title = "Rate per 10,000 Population", linecolor = "#b3b3b3", titlefont = list(size = 16))
       ) %>%
@@ -433,11 +295,10 @@ ijb_age_table_pop <- SharedData$new(ijb_pop_age_table_data, key = ~key, group = 
 
 
 bscols(widths = 12,
-       div(style = css(width="97%", height="435px", margin="20px"),
+       div(style = css(width="97%", height="560px", margin="20px"),
 DT::datatable(ijb_age_table_pop, rownames = FALSE, selection = 'none',
               options = list(pageLength = 33,
                              scrollX = TRUE,
-                            # fixedColumns = list(leftColumns = 1),
                              scrollY = TRUE,
                              dom = "t",
                              ordering = FALSE,
@@ -487,14 +348,14 @@ bscols(widths = c(1,5,NA),
 ```{r plot-hb-age-pop}
 
 bscols(widths = 12,
-  div(style = css(width="98%", height="365px", marginBottom="0px"),
+  div(style = css(width="98%", height="365px", marginBottom="-20px"),
 plot_ly(pds_pop_age_data_hb, x = ~geog, y = ~pop_rate_10000, meta = ~fy, hovertext = ~age_grp_2, type = 'bar', color = ~age_grp_2, colors = age_colours, 
         hovertemplate = paste0("%{x} <br>", "%{meta} <br>", "Age Group: %{hovertext} <br>",
                             "Rate per 10,000 Population: %{y}<extra></extra>")) %>% 
   layout(clickmode = "none", 
          showlegend = TRUE, legend = list(orientation = 'h', x = 0.5, y = 100, xanchor = "center"),
          margin = list(l = -5, b = 10, t = 40),
-         xaxis = list(title = "Health Board", showline = FALSE, linecolor = "#b3b3b3",
+         xaxis = list(title = "", showline = FALSE, linecolor = "#b3b3b3",
                       categoryorder = "trace", tickangle = -45, titlefont = list(size = 16)),
          yaxis = list(title = "Rate per 10,000 Population", linecolor = "#b3b3b3", titlefont = list(size = 16))
       ) %>%
@@ -531,7 +392,7 @@ hb_age_table_pop <- SharedData$new(hb_pop_age_table_data, key = ~key, group = "h
 
 
 bscols(widths = 12,
-       div(style = css(width="97%", height="460px", margin="20px", marginTop ="45px"),
+       div(style = css(width="97%", height="620px", margin="20px"),
 DT::datatable(hb_age_table_pop, rownames = FALSE, selection = 'none',
               options = list(pageLength = 15,
                              scrollX = TRUE,
@@ -585,7 +446,7 @@ plot_rate_line_legend_1(legend_data)),NULL
 ```{r plot-trend-age-pop}
 
 bscols(widths = 12,
-  div(style = css(width="98%", height="350px"),
+  div(style = css(width="98%", height="330px"),
 plot_rate_line(pds_pop_age_data, measure = age_grp_2, measure_text = "Age Group: ", y = "Rate per 10,000 Population", scales = "free_y", colours = age_colours, facet_space = -5))
 )
 
@@ -676,7 +537,7 @@ The Trend tab shows the trend of the percentage of referrals that have received 
 
 `r if(qt != 4) {div(style = css(fontStyle="italic"),paste("LDP Standard performance figures are not provided until data is available for the full financial year."))}`
 
-Row {.tabset data-height=1110}
+Row {.tabset data-height=1180}
 ----------------------------------------------------------------------
 
 ### **Integration Authority Areas**
@@ -723,7 +584,7 @@ plot_ly(ldp_age_data_ijb, x = ~geog, y = ~perc_met, meta = ~fy, hovertext = ~age
   layout(clickmode = "none", 
          showlegend = TRUE, legend = list(orientation = 'h', x = 0.5, y = 100, xanchor = "center"),
          margin = list(l = -5, b = 10, t = 40),
-         xaxis = list(title = "Integration Authority Area", showline = FALSE, linecolor = "#b3b3b3",
+         xaxis = list(title = "", showline = FALSE, linecolor = "#b3b3b3",
                       categoryorder = "trace", tickangle = -45, titlefont = list(size = 16)),
          yaxis = list(title = "", linecolor = "#b3b3b3", ticksuffix = "%")
       ) %>%
@@ -788,7 +649,7 @@ ijb_ldp_age_table_data <- bind_rows(ijb_age_totals_data, ijb_age_ldp_data) %>%
 ijb_age_table_ldp <- SharedData$new(ijb_ldp_age_table_data, key = ~key, group = "ijb_age_ldp")
 
 bscols(widths = 12,
-       div(style = css(width="97%", height="435px", margin="20px"),
+       div(style = css(width="97%", height="545px", margin="20px"),
 DT::datatable(ijb_age_table_ldp, rownames = FALSE, selection = "none", #extensions = "FixedColumns",
               options = list(pageLength = 66,
                              scrollX = TRUE,
@@ -832,14 +693,14 @@ bscols(widths = c(1,5,NA),
 ```{r plot-hb-age-ldp}
 
 bscols(widths = 12,
-  div(style = css(width="98%", height="365px", marginBottom="0px"),
+  div(style = css(width="98%", height="365px", marginBottom="-20px"),
 plot_ly(ldp_age_data_hb, x = ~geog, y = ~perc_met, meta = ~fy, hovertext = ~age_grp_2, type = 'bar', color = ~age_grp_2, colors = age_colours, 
         hovertemplate = paste0("%{x} <br>", "%{meta} <br>", "Age Group: %{hovertext} <br>",
                             "%{y}<extra></extra>")) %>% 
   layout(clickmode = "none", 
          showlegend = TRUE, legend = list(orientation = 'h', x = 0.5, y = 100, xanchor = "center"), 
          margin = list(l = -5, b = 10, t = 40),
-         xaxis = list(title = "Health Board", showline = FALSE, linecolor = "#b3b3b3",
+         xaxis = list(title = "", showline = FALSE, linecolor = "#b3b3b3",
                       categoryorder = "trace", tickangle = -45, titlefont = list(size = 16)),
          yaxis = list(title = "", linecolor = "#b3b3b3", ticksuffix = "%")
       ) %>%
@@ -904,7 +765,7 @@ hb_ldp_age_table_data <- bind_rows(hb_age_totals_data, hb_age_ldp_data) %>%
 hb_age_table_ldp <- SharedData$new(hb_ldp_age_table_data, key = ~key, group = "hb_age_ldp")
 
 bscols(widths = 12,
-       div(style = css(width="97%", height="460px", margin="20px", marginTop="40px"),
+       div(style = css(width="97%", height="620px", margin="20px", marginTop="0px"),
 DT::datatable(hb_age_table_ldp, rownames = FALSE, selection = "none", #extensions = "FixedColumns",
               options = list(pageLength = 30,
                              scrollX = TRUE,
@@ -952,7 +813,7 @@ plot_ldp_line_legend_1(legend_data)),NULL
 
 ```{r plot-ldp-age-trend}
 bscols(widths = 12,
-  div(style = css(width="98%", height="350px"),
+  div(style = css(width="98%", height="330px"),
 plot_ldp_line(ldp_all_age_data, measure = age_grp_2, measure_text = "Age Group: ", colours = age_colours))
 )
 
@@ -1056,7 +917,7 @@ The Trend tab shows the trend of the rate by financial year for Scotland and the
 <!-- **Please note that both the Dementia Post Diagnostic Support service provision and data submission to PHS were affected by the COVID-19 pandemic.** -->
 
 
-Row {.tabset data-height=1010}
+Row {.tabset data-height=1180}
 ----------------------------------------------------------------------
 
 ### **Integration Authority Areas**
@@ -1091,7 +952,7 @@ plot_ly(pds_pop_sex_data_ijb, x = ~geog, y = ~pop_rate_10000, meta = ~fy, hovert
   layout(clickmode = "none", 
          showlegend = TRUE, legend = list(orientation = 'h', x = 0.5, y = 100, xanchor = "center"),
          margin = list(l = -5, b = 10, t = 40),
-         xaxis = list(title = "Integration Authority Area", showline = FALSE, linecolor = "#b3b3b3",
+         xaxis = list(title = "", showline = FALSE, linecolor = "#b3b3b3",
                       categoryorder = "trace", tickangle = -45, titlefont = list(size = 16)),
          yaxis = list(title = "Rate per 10,000 Population", linecolor = "#b3b3b3", titlefont = list(size = 16),
                       range = c(0,max(pds_ijb_sex_rates$pop_rate_10000)))
@@ -1123,7 +984,7 @@ ijb_sex_table_pop <- SharedData$new(ijb_pop_sex_table_data, key = ~fy, group = "
 
 
 bscols(widths = 12,
-       div(style = css(width="97%", height="420px", margin="20px"),
+       div(style = css(width="97%", height="630px", margin="20px"),
 DT::datatable(ijb_sex_table_pop, rownames = FALSE, selection = 'none',#extensions = "FixedColumns",
               options = list(pageLength = 33,
                              scrollX = TRUE,
@@ -1168,14 +1029,14 @@ bscols(widths = c(1,5,NA),
 <h2 style="margin-left: 70px; margin-top: 0px; margin-bottom: 0px"> Number of people referred to PDS per 10,000 population (65+) by Gender and Health Board</h2>
 ```{r plot-hb-sex-pop}
 bscols(widths = 12,
-  div(style = css(width="98%", height="365px", marginBottom="0px"),
+  div(style = css(width="98%", height="365px", marginBottom="-20px"),
 plot_ly(pds_pop_sex_data_hb, x = ~geog, y = ~pop_rate_10000, meta = ~fy, hovertext = ~sex, type = 'bar', color = ~sex, colors = sex_colours, 
         hovertemplate = paste0("%{x} <br>", "%{meta} <br>", "Gender: %{hovertext} <br>",
                             "Rate per 10,000 Population: %{y}<extra></extra>")) %>% 
   layout(clickmode = "none", 
          showlegend = TRUE, legend = list(orientation = 'h', x = 0.5, y = 100, xanchor = "center"),
          margin = list(l = -5, b = 10, t = 40),
-         xaxis = list(title = "Health Board", showline = FALSE, linecolor = "#b3b3b3",
+         xaxis = list(title = "", showline = FALSE, linecolor = "#b3b3b3",
                       categoryorder = "trace", tickangle = -45, titlefont = list(size = 16)),
          yaxis = list(title = "Rate per 10,000 Population", linecolor = "#b3b3b3", titlefont = list(size = 16),
                       range = c(0,max(pds_hb_sex_rates$pop_rate_10000)))
@@ -1204,7 +1065,7 @@ hb_pop_sex_table_data <- pds_all_sex_rates %>% filter(geog == "Scotland" | grepl
 hb_sex_table_pop <- SharedData$new(hb_pop_sex_table_data, key = ~fy, group = "hb_sex_pop")
 
 bscols(widths = 12,
-       div(style = css(width="97%", height="410px", margin="20px"),
+       div(style = css(width="97%", height="620px", margin="20px"),
 DT::datatable(hb_sex_table_pop, rownames = FALSE, selection = 'none',# extensions = "FixedColumns",
               options = list(pageLength = 15,
                              scrollX = TRUE,
@@ -1256,7 +1117,7 @@ plot_rate_line_legend_1(legend_data)),NULL
 
 ```{r plot-trend-sex-pop}
 bscols(widths = 12,
-  div(style = css(width="98%", height="370px"),
+  div(style = css(width="98%", height="330px"),
 plot_rate_line(pds_pop_sex_data, measure = sex, measure_text = "Gender: ", y = "Rate per 10,000 Population"))
 )
 
@@ -1272,7 +1133,7 @@ trend_pop_sex_table_data <- pds_all_sex_rates %>% filter(!is.na(pop_rate_10000))
 trend_pop_sex_table <- SharedData$new(trend_pop_sex_table_data, key = ~geog, group = "trend_sex_pop")
 
 bscols(widths = 12,
-       div(style = css(width="97%", height="140px", margin="20px"),
+       div(style = css(width="97%", height="120px", margin="20px"),
 DT::datatable(trend_pop_sex_table, rownames = FALSE, selection = 'none',
               options = list(pageLength = 10,
                              scrollX = TRUE,
@@ -1343,7 +1204,7 @@ The Trend tab shows the trend of the percentage of referrals that have received 
 
 <!-- **Please note that both the Dementia Post Diagnostic Support service provision and data submission to PHS were affected by the COVID-19 pandemic.** -->
 
-Row {.tabset data-height=1100}
+Row {.tabset data-height=1180}
 ----------------------------------------------------------------------
 
 ### **Integration Authority Areas**
@@ -1378,7 +1239,7 @@ plot_ly(ldp_sex_data_ijb, x = ~geog, y = ~perc_met, meta = ~fy, hovertext = ~sex
   layout(clickmode = "none", 
          showlegend = TRUE, legend = list(orientation = 'h', x = 0.5, y = 100, xanchor = "center"),
          margin = list(l = -5, b = 10, t = 40),
-         xaxis = list(title = "Integration Authority Area", showline = FALSE, linecolor = "#b3b3b3",
+         xaxis = list(title = "", showline = FALSE, linecolor = "#b3b3b3",
                       categoryorder = "trace", tickangle = -45, titlefont = list(size = 16)),
          yaxis = list(title = "", linecolor = "#b3b3b3", ticksuffix = "%")
       ) %>%
@@ -1417,7 +1278,7 @@ ijb_ldp_sex_table_data <- bind_rows(ijb_sex_totals_data, ijb_sex_ldp_data) %>%
 ijb_sex_table_ldp <- SharedData$new(ijb_ldp_sex_table_data, key = ~fy, group = "ijb_sex_ldp")
 
 bscols(widths = 12,
-       div(style = css(width="97%", height="460px", margin="20px"),
+       div(style = css(width="97%", height="620px", margin="20px"),
 DT::datatable(ijb_sex_table_ldp, rownames = FALSE, selection = 'none', #extensions = "FixedColumns",
                options = list(pageLength = 66,
                              scrollX = TRUE,
@@ -1463,14 +1324,14 @@ bscols(widths = c(1,5,NA),
 <h2 style="margin-left: 70px; margin-top: 0px; margin-bottom: 0px">Percentage of referrals who received a minimum of one year’s PDS by Gender and Health Board</h2>
 ```{r plot-hb-sex-ldp}
 bscols(widths = 12,
-  div(style = css(width="98%", height="365px", marginBottom="0px"),
+  div(style = css(width="98%", height="365px", marginBottom="-20px"),
 plot_ly(ldp_sex_data_hb, x = ~geog, y = ~perc_met, meta = ~fy, hovertext = ~sex, type = 'bar', color = ~sex, colors = sex_colours, 
         hovertemplate = paste0("%{x} <br>", "%{meta} <br>", "Gender: %{hovertext} <br>",
                             "%{y}<extra></extra>")) %>% 
   layout(clickmode = "none", 
          showlegend = TRUE, legend = list(orientation = 'h', x = 0.5, y = 100, xanchor = "center"), 
          margin = list(l = -5, b = 10, t = 40),
-         xaxis = list(title = "Health Board", showline = FALSE, linecolor = "#b3b3b3",
+         xaxis = list(title = "", showline = FALSE, linecolor = "#b3b3b3",
                       categoryorder = "trace", tickangle = -45, titlefont = list(size = 16)),
          yaxis = list(title = "", linecolor = "#b3b3b3", ticksuffix = "%")
       ) %>%
@@ -1511,7 +1372,7 @@ hb_sex_table_ldp <- SharedData$new(hb_ldp_sex_table_data, key = ~fy,  group = "h
 
 
 bscols(widths = 12,
-       div(style = css(width="97%", height="460px", margin="20px"),
+       div(style = css(width="97%", height="600px", margin="20px"),
 DT::datatable(hb_sex_table_ldp, rownames = FALSE, selection = 'none',# extensions = "FixedColumns",
               options = list(pageLength = 30,
                              scrollX = TRUE,
@@ -1563,7 +1424,7 @@ plot_ldp_line_legend_1(legend_data)),NULL
 
 ```{r plot-ldp-sex}
 bscols(widths = 12,
-  div(style = css(width="98%", height="370px"),
+  div(style = css(width="98%", height="330px"),
 plot_ldp_line(ldp_all_sex_data, measure = sex, measure_text = "Gender: "))
 )
 
@@ -1595,7 +1456,7 @@ ldp_sex_table <- SharedData$new(ldp_sex_table_data, key = ~geog, group = "ldp_se
 
 
 bscols(widths = 12,
-       div(style = css(width="97%", height="200px", margin="20px"),
+       div(style = css(width="97%", height="195px", margin="20px"),
 DT::datatable(ldp_sex_table, rownames = FALSE, selection = 'none',
               options = list(pageLength = 10,
                              scrollX = TRUE,
@@ -1669,7 +1530,7 @@ The Trend tab shows the trend of the rate by financial year for Scotland and the
 <!-- **Please note that both the Dementia Post Diagnostic Support service provision and data submission to PHS were affected by the COVID-19 pandemic.** -->
 
 
-Row {.tabset data-height=1020}
+Row {.tabset data-height=1180}
 ----------------------------------------------------------------------
 
 ### **Integration Authority Areas**
@@ -1721,14 +1582,14 @@ bscols(widths = c(1,10,NA), NULL, data_filter_ijb_simd_pop_geog, NULL)
 ```{r plot-ijb-simd-pop}
 
 bscols(widths = 12,
-  div(style = css(width="98%", height="355px", marginBottom="-20px"),
+  div(style = css(width="98%", height="350px", marginBottom="-20px"),
 plot_ly(pds_pop_simd_data_ijb, x = ~geog, y = ~pop_rate_10000, meta = ~fy, hovertext = ~simd, type = 'bar', color = ~simd, colors = simd_colours, 
         hovertemplate = paste0("%{x} <br>", "%{meta} <br>", "SIMD Quintile: %{hovertext} <br>",
                             "Rate per 10,000 Population: %{y}<extra></extra>")) %>% 
   layout(clickmode = "none",
          showlegend = TRUE, legend = list(orientation = 'h', x = 0.5, y = 100, xanchor = "center"),
          margin = list(l = -5, b = 10, t = 40),
-         xaxis = list(title = "Integration Authority Area", showline = FALSE, linecolor = "#b3b3b3",
+         xaxis = list(title = "", showline = FALSE, linecolor = "#b3b3b3",
                       categoryorder = "trace", tickangle = -45, titlefont = list(size = 16)),
          yaxis = list(title = "Rate per 10,000 Population", linecolor = "#b3b3b3", titlefont = list(size = 16))
       ) %>%
@@ -1773,7 +1634,7 @@ ijb_simd_table_pop <- SharedData$new(ijb_pop_simd_table_data, key = ~key, group 
 
 
 bscols(widths = 12,
-       div(style = css(width="97%", height="350px", margin="20px"),
+       div(style = css(width="97%", height="555px", margin="20px"),
 DT::datatable(ijb_simd_table_pop, rownames = FALSE, selection = 'none',
               options = list(pageLength = 33,
                              scrollX = TRUE,
@@ -1842,14 +1703,14 @@ bscols(widths = c(1,5,NA),
 ```{r plot-hb-simd-pop}
 
 bscols(widths = 12,
-  div(style = css(width="98%", height="355px", marginBottom="-20px"),
+  div(style = css(width="98%", height="365px", marginBottom="-20px"),
 plot_ly(pds_pop_simd_data_hb, x = ~geog, y = ~pop_rate_10000, meta = ~fy, hovertext = ~simd, type = 'bar', color = ~simd, colors = simd_colours, 
         hovertemplate = paste0("%{x} <br>", "%{meta} <br>", "SIMD Quintile: %{hovertext} <br>",
                             "Rate per 10,000 Population: %{y}<extra></extra>")) %>% 
   layout(clickmode = "none", 
          showlegend = TRUE, legend = list(orientation = 'h', x = 0.5, y = 100, xanchor = "center"),
          margin = list(l = -5, b = 10, t = 40),
-         xaxis = list(title = "Health Board", showline = FALSE, linecolor = "#b3b3b3",
+         xaxis = list(title = "", showline = FALSE, linecolor = "#b3b3b3",
                       categoryorder = "trace", tickangle = -45, titlefont = list(size = 16)),
          yaxis = list(title = "Rate per 10,000 Population", linecolor = "#b3b3b3", titlefont = list(size = 16))
       ) %>%
@@ -1894,7 +1755,7 @@ hb_simd_table_pop <- SharedData$new(hb_pop_simd_table_data, key = ~key, group = 
 
 
 bscols(widths = 12,
-       div(style = css(width="97%", height="400px", margin="20px"),
+       div(style = css(width="97%", height="620px", margin="20px"),
 DT::datatable(hb_simd_table_pop, rownames = FALSE, selection = "none", #extensions = "FixedColumns",
                   options = list(pageLength = 15,
                              scrollX = TRUE,
@@ -1949,7 +1810,7 @@ plot_rate_line_legend_1(legend_data)),NULL
 ```{r plot-trend-simd-pop}
 
 bscols(widths = 12,
-  div(style = css(width="98%", height="340px"),
+  div(style = css(width="98%", height="320px"),
 plot_rate_line(pds_pop_simd_data, measure = simd, measure_text = "SIMD Quintile: ", y = "Rate per 10,000 Population", colours = simd_colours))
 )
 
@@ -2042,7 +1903,7 @@ The Trend tabs include a chart showing the trend of the percentage by financial 
 
 <!-- **Please note that both the Dementia Post Diagnostic Support service provision and data submission to PHS were affected by the COVID-19 pandemic.** -->
 
-Row {.tabset data-height=1110}
+Row {.tabset data-height=1180}
 ----------------------------------------------------------------------
 
 ### **Integration Authority Areas**
@@ -2097,14 +1958,14 @@ bscols(widths = c(1,10,NA), NULL, data_filter_ijb_simd_ldp_geog, NULL)
 ```{r plot-ijb-simd-ldp}
 
 bscols(widths = 12,
-  div(style = css(width="98%", height="355px", marginBottom="-20px"),
+  div(style = css(width="98%", height="350px", marginBottom="-20px"),
 plot_ly(ldp_simd_data_ijb, x = ~geog, y = ~perc_met, meta = ~fy, hovertext = ~simd, type = 'bar', color = ~simd, colors = simd_colours, 
         hovertemplate = paste0("%{x} <br>", "%{meta} <br>", "SIMD Quintile: %{hovertext} <br>",
                             "%{y}<extra></extra>")) %>% 
   layout(clickmode = "none", 
          showlegend = TRUE, legend = list(orientation = 'h', x = 0.5, y = 100, xanchor = "center"),
          margin = list(l = -5, b = 10, t = 40),
-         xaxis = list(title = "Integration Authority Area", showline = FALSE, linecolor = "#b3b3b3",
+         xaxis = list(title = "", showline = FALSE, linecolor = "#b3b3b3",
                       categoryorder = "trace", tickangle = -45, titlefont = list(size = 16)),
          yaxis = list(title = "", linecolor = "#b3b3b3", ticksuffix = "%")
       ) %>%
@@ -2174,7 +2035,7 @@ ijb_simd_table_ldp <- SharedData$new(ijb_ldp_simd_table_data, key = ~key, group 
 
 
 bscols(widths = 12,
-       div(style = css(width="97%", height="430px", margin="20px"),
+       div(style = css(width="97%", height="545px", margin="20px"),
 DT::datatable(ijb_simd_table_ldp, rownames = FALSE, selection = "none", #extensions = "FixedColumns",
               options = list(pageLength = 66,
                              scrollX = TRUE,
@@ -2248,14 +2109,14 @@ bscols(widths = c(1,5,NA),
 ```{r plot-hb-simd-ldp}
 
 bscols(widths = 12,
-  div(style = css(width="98%", height="355px", marginBottom="-20px"),
+  div(style = css(width="98%", height="365px", marginBottom="-20px"),
 plot_ly(ldp_simd_data_hb, x = ~geog, y = ~perc_met, meta = ~fy, hovertext = ~simd, type = 'bar', color = ~simd, colors = simd_colours, 
         hovertemplate = paste0("%{x} <br>", "%{meta} <br>", "SIMD Quintile: %{hovertext} <br>",
                             "%{y}<extra></extra>")) %>% 
   layout(clickmode = "none", 
          showlegend = TRUE, legend = list(orientation = 'h', x = 0.5, y = 100, xanchor = "center"), 
          margin = list(l = -5, b = 10, t = 40),
-         xaxis = list(title = "Health Board", showline = FALSE, linecolor = "#b3b3b3",
+         xaxis = list(title = "", showline = FALSE, linecolor = "#b3b3b3",
                       categoryorder = "trace", tickangle = -45, titlefont = list(size = 16)),
          yaxis = list(title = "", linecolor = "#b3b3b3", ticksuffix = "%")
       ) %>%
@@ -2325,7 +2186,7 @@ hb_simd_table_ldp <- SharedData$new(hb_ldp_simd_table_data, key = ~key, group = 
 
 
 bscols(widths = 12,
-       div(style = css(width="97%", height="430px", margin="20px"),
+       div(style = css(width="97%", height="610px", margin="20px"),
 DT::datatable(hb_simd_table_ldp, rownames = FALSE, selection = "none", #extensions = "FixedColumns",
               options = list(pageLength = 30,
                              scrollX = TRUE,
@@ -2365,7 +2226,7 @@ bscols(widths = c(1,5,NA),
 
 ```
 
-<h2 style="margin-left: 70px; margin-top: 0px; margin-bottom: 20px">Percentage of referrals who received a minimum of one year’s PDS by SIMD Quintile and Financial Year </h2>
+<h2 style="margin-left: 70px; margin-top: 0px; margin-bottom: 15px">Percentage of referrals who received a minimum of one year’s PDS by SIMD Quintile and Financial Year </h2>
 ```{r plot-ldp-simd-legend}
 bscols(widths = 12,
        div(style = css(height="30px"),
@@ -2376,7 +2237,7 @@ plot_ldp_line_legend_1(legend_data)),NULL
 
 ```{r plot-ldp-simd}
 bscols(widths = 12,
-  div(style = css(width="98%", height="330px"),
+  div(style = css(width="98%", height="320px"),
 plot_ldp_line(ldp_all_simd_data, measure = simd, measure_text = "SIMD Quintile: ", colours = simd_colours))
 )
 
@@ -2410,7 +2271,7 @@ ldp_simd_table <- SharedData$new(ldp_simd_table_data, key = ~geog, group = "ldp_
 
 
 bscols(widths = 12,
-       div(style = css(width="97%", height="460px", margin="20px", marginTop="-10px"),
+       div(style = css(width="97%", height="430px", margin="20px", marginTop="-10px"),
 DT::datatable(ldp_simd_table, rownames = FALSE, selection = 'none',
               options = list(pageLength = 10,
                              scrollX = TRUE,
@@ -2501,139 +2362,4 @@ DT::datatable(ldp_simd_table_2, rownames = FALSE, selection = 'none',
 
 ```
 
-```{js }
-function filter_default() {
-
-  document.getElementById("filter_ijb_age_pop").getElementsByClassName("selectized") 
-  [0].selectize.setValue(pds_year, false);
-
-  document.getElementById("filter_ijb_age_pop").getElementsByClassName("selectized")
-  [0].selectize.removeOption("");
-  
-  document.getElementById("filter_ijb_age_pop_geog").getElementsByClassName("selectized")
-  [0].selectize.removeOption("");
-  
-  document.getElementById("filter_hb_age_pop").getElementsByClassName("selectized") 
-  [0].selectize.setValue(pds_year, false);
-
-  document.getElementById("filter_hb_age_pop").getElementsByClassName("selectized")
-  [0].selectize.removeOption("");
-  
-  document.getElementById("filter_ijb_age_ldp_geog").getElementsByClassName("selectized")
-  [0].selectize.removeOption("");
-  
-  document.getElementById("filter_trend_age_pop").getElementsByClassName("selectized") 
-  [0].selectize.setValue("Scotland", false);
-
-  document.getElementById("filter_trend_age_pop").getElementsByClassName("selectized")
-  [0].selectize.removeOption("");
-
-  document.getElementById("filter_ijb_age_ldp").getElementsByClassName("selectized") 
-  [0].selectize.setValue(ldp_year, false);
-
-  document.getElementById("filter_ijb_age_ldp").getElementsByClassName("selectized")
-  [0].selectize.removeOption("");
-    
-  document.getElementById("filter_hb_age_ldp").getElementsByClassName("selectized") 
-  [0].selectize.setValue(ldp_year, false);
-
-  document.getElementById("filter_hb_age_ldp").getElementsByClassName("selectized")
-  [0].selectize.removeOption("");
-  
-  document.getElementById("filter_ldp_age").getElementsByClassName("selectized") 
-  [0].selectize.setValue("Scotland", false);
-
-  document.getElementById("filter_ldp_age").getElementsByClassName("selectized")
-  [0].selectize.removeOption("");
-  
-  document.getElementById("filter_trend_sex_pop").getElementsByClassName("selectized") 
-  [0].selectize.setValue("Scotland", false);
-
-  document.getElementById("filter_trend_sex_pop").getElementsByClassName("selectized")
-  [0].selectize.removeOption("");
-  
-  document.getElementById("filter_hb_sex_pop").getElementsByClassName("selectized") 
-  [0].selectize.setValue(pds_year, false);
-
-  document.getElementById("filter_hb_sex_pop").getElementsByClassName("selectized")
-  [0].selectize.removeOption("");
-  
-  document.getElementById("filter_ijb_sex_pop").getElementsByClassName("selectized") 
-  [0].selectize.setValue(pds_year, false);
-
-  document.getElementById("filter_ijb_sex_pop").getElementsByClassName("selectized")
-  [0].selectize.removeOption("");
-  
-  document.getElementById("filter_ijb_sex_ldp").getElementsByClassName("selectized") 
-  [0].selectize.setValue(ldp_year, false);
-
-  document.getElementById("filter_ijb_sex_ldp").getElementsByClassName("selectized")
-  [0].selectize.removeOption("");
-    
-  document.getElementById("filter_hb_sex_ldp").getElementsByClassName("selectized") 
-  [0].selectize.setValue(ldp_year, false);
-
-  document.getElementById("filter_hb_sex_ldp").getElementsByClassName("selectized")
-  [0].selectize.removeOption("");
-  
-  document.getElementById("filter_ldp_sex").getElementsByClassName("selectized") 
-  [0].selectize.setValue("Scotland", false);
-
-  document.getElementById("filter_ldp_sex").getElementsByClassName("selectized")
-  [0].selectize.removeOption("");
-  
-  document.getElementById("filter_trend_simd_pop").getElementsByClassName("selectized") 
-  [0].selectize.setValue("Scotland", false);
-
-  document.getElementById("filter_trend_simd_pop").getElementsByClassName("selectized")
-  [0].selectize.removeOption("");
-  
-  document.getElementById("filter_hb_simd_pop").getElementsByClassName("selectized") 
-  [0].selectize.setValue(pds_year, false);
-
-  document.getElementById("filter_hb_simd_pop").getElementsByClassName("selectized")
-  [0].selectize.removeOption("");
-  
-  document.getElementById("filter_ijb_simd_pop").getElementsByClassName("selectized") 
-  [0].selectize.setValue(pds_year, false);
-
-  document.getElementById("filter_ijb_simd_pop").getElementsByClassName("selectized")
-  [0].selectize.removeOption("");
-  
-  document.getElementById("filter_ijb_simd_pop_geog").getElementsByClassName("selectized")
-  [0].selectize.removeOption("");
-  
-  document.getElementById("filter_ijb_simd_ldp_geog").getElementsByClassName("selectized")
-  [0].selectize.removeOption("");
-  
-  document.getElementById("filter_ldp_simd").getElementsByClassName("selectized") 
-  [0].selectize.setValue("Scotland", false);
-
-  document.getElementById("filter_ldp_simd").getElementsByClassName("selectized")
-  [0].selectize.removeOption("");
-  
-  document.getElementById("filter_hb_simd_ldp").getElementsByClassName("selectized") 
-  [0].selectize.setValue(ldp_year, false);
-
-  document.getElementById("filter_hb_simd_ldp").getElementsByClassName("selectized")
-  [0].selectize.removeOption("");
-  
-  document.getElementById("filter_ijb_simd_ldp").getElementsByClassName("selectized") 
-  [0].selectize.setValue(ldp_year, false);
-
-  document.getElementById("filter_ijb_simd_ldp").getElementsByClassName("selectized")
-  [0].selectize.removeOption("");
-  
-  document.getElementById("filter_ldp_simd_bar").getElementsByClassName("selectized") 
-  [0].selectize.setValue("Scotland", false);
-
-  document.getElementById("filter_ldp_simd_bar").getElementsByClassName("selectized")
-  [0].selectize.removeOption("");
-  
- 
-  }
-  
-  $(document).ready(filter_default);
-
-```
-
+<!-- END OF SCRIPT -->
