--- a/management-report/markdown/management-report.Rmd
+++ b/management-report/markdown/management-report.Rmd
@@ -105,23 +105,14 @@ if(qt == 4){full_years = all_years}else{full_years = all_years[-length(all_years
 #load completion data
 comp_data <- read_rds(get_mi_data_path("comp_data", ext = "rds", test_output = test_output))
 
-
+#glossary calculations
+glossary_figures <- read_rds(get_mi_data_path("glossary_figures", ext = "rds", test_output = test_output))
+perc_65_plus <- glossary_figures[1]
+age_unknown <- glossary_figures[2]
+sex_unknown <- glossary_figures[3]
+simd_unknown <- glossary_figures[4]
 ```
 
-```{r glossary calculations}
-#load individual data
-ldp <- read_rds(get_mi_data_path("ldp_data", ext = "rds", test_output = test_output))
-
-#calculate total number of referrals where age is known and percentage of those that are 65+
-total_age_known <- ldp %>% filter(age_grp != "Unknown") %>% nrow()
-age_65_plus <-ldp %>% filter(age >= 65) %>% nrow()
-perc_65_plus <- round(age_65_plus/total_age_known*100,1)
-
-#calculate number of unknown records
-age_unknown <- ldp %>% filter(age_grp == "Unknown") %>% nrow()
-sex_unknown <- ldp %>% filter(sex %in% c("98 Not Specified", "99 Not Known")) %>% nrow()
-simd_unknown <- ldp %>% filter(simd == "Unknown") %>% nrow()
-```
 
 Home
 =================================================
