formatting and adding comments

--- a/management-report/markdown/subpage-hb.Rmd
+++ b/management-report/markdown/subpage-hb.Rmd
@@ -342,6 +342,4 @@ plot_referrals(subpage_data,
 
 ```
 
-
-Row
------------------------------------------------------------------------
+<!-- END OF SCRIPT -->
