--- a/management-report/markdown/subpage-pathways.Rmd
+++ b/management-report/markdown/subpage-pathways.Rmd
@@ -1,147 +1,3 @@
----
-title: "PATHWAYS DRAFT PATHWAYS DRAFT PATHWAYS DRAFT PATHWAYS DRAFT PATHWAYS DRAFT"
-output: 
-  flexdashboard::flex_dashboard:
-    logo: phs-logo.png
-    orientation: rows
-    vertical_layout: scroll
----
-
-```{r load-setup, include=FALSE}
-source(here::here("code", "00_setup-environment.R"))
-library(crosstalk) # for drop down menus
-#library(phsstyles)
-library(htmltools)
-
-
-# Write numbers with thousands separator
-knit_hooks$set(inline = function(x){
-  if(!is.character(x)){prettyNum(x, big.mark=",")}else{x}
-})
-```
-
----
-date: "`r paste('Data as at', format(end_date, '%d %B %Y'))`"
----
-
-```{r setup, include=FALSE}
-
-# Load functions
-walk(dir(here::here("functions"), full.names = TRUE), source)
-
-
-# Load PDS data
-pds <- read_rds(get_mi_data_path("final_data", ext = "rds", test_output = test_output)) %>% 
-  
-  # Remove codes from board and IJB
-  mutate(health_board = str_sub(health_board, 3, -1),
-         ijb          = if_else(is.na(ijb),
-                                "Unknown",
-                                str_sub(ijb, 11, -1)))
-
-# Load expected diagnoses reference file
-exp <- read_csv(get_exp_diagnoses_path())
-
-
-# Load error summary
-err <- read_rds(get_mi_data_path("error_data", ext = "rds", test_output = test_output)) %>% 
-
-  mutate(ijb = if_else(is.na(ijb),
-                                "Unknown",
-                                str_sub(ijb, 11, -1)))
-
-# calculate referrals for Scotland and health boards
-pds_ijb <- pds %>% arrange(ijb)
-
-pds_ijb %<>% rename(geog = ijb) 
-
-pds_ijb$geog<- factor(pds_ijb$geog, levels = unique(pds_ijb$geog))
-
-pds_scot <- pds %>% group_by(health_board = "Scotland", ijb = "Scotland", fy, month, ldp_full, ldp, age_grp_2, age_grp, simd, sex) %>%  summarise(referrals = sum(referrals), .groups = "drop")
-
-pds_scot %<>% rename(geog = ijb) 
-
-pds_scot$geog<- factor(pds_scot$geog, levels = unique(pds_scot$geog))
-
-pds_hb <- pds %>% group_by(health_board, fy, month, ldp_full, ldp, age_grp_2, age_grp, simd, sex) %>% 
-  summarise(referrals = sum(referrals), .groups = "drop") %>% mutate(ijb = health_board, .before = fy)
-
-pds_hb %<>% rename(geog = ijb) 
-
-pds_hb$geog<- factor(pds_hb$geog, levels = unique(pds_hb$geog))
-
-# combine data for ijb, hb and Scotland
-pds_all <- bind_rows(pds_scot, pds_ijb, pds_hb)
-
-pds_all$geog<- factor(pds_all$geog, levels = unique(pds_all$geog))
-
-#get totals for all geogs, hbs, ijbs, scotland
-pds_all_totals <- pds_all %>% group_by(geog, fy, age_grp_2 = "All") %>% summarise(total_referrals = sum(referrals))
-
-pds_ijb_totals <- pds_ijb %>% group_by(geog, fy, age_grp_2 = "All") %>% summarise(total_referrals = sum(referrals))
-
-pds_hb_totals <- pds_hb %>% group_by(geog, fy, age_grp_2 = "All") %>% summarise(total_referrals = sum(referrals))
-
-pds_scot_totals <- pds_scot %>% group_by(geog, fy, age_grp_2 = "All") %>% summarise(total_referrals = sum(referrals))
-
-
-#get totals for all geogs, hbs, ijbs, scotland with LARGE AGE GROUPS
-pds_all_totals_2 <- bind_rows(pds_all_totals,
-  pds_all %>% filter(age_grp_2 != "Unknown") %>% group_by(geog, fy, age_grp_2) %>% summarise(total_referrals = sum(referrals))
-)
-
-pds_all_totals_2$age_grp_2<- factor(pds_all_totals_2$age_grp_2, levels = c("All", "65+", "64 and Under"))
-
-pds_ijb_totals_2 <- bind_rows(pds_ijb_totals,
-    pds_ijb %>% filter(age_grp_2 != "Unknown") %>% group_by(geog, fy, age_grp_2) %>% summarise(total_referrals = sum(referrals))
-)
-
-pds_ijb_totals_2$age_grp_2<- factor(pds_ijb_totals_2$age_grp_2, levels = c("All", "65+", "64 and Under"))
-
-
-pds_hb_totals_2 <- bind_rows(pds_hb_totals,
-    pds_hb %>% filter(age_grp_2 != "Unknown") %>% group_by(geog, fy, age_grp_2) %>% summarise(total_referrals = sum(referrals))
-)
-
-pds_hb_totals_2$age_grp_2<- factor(pds_hb_totals_2$age_grp_2, levels = c("All", "65+", "64 and Under"))
-
-
-pds_scot_totals_2 <- bind_rows(pds_scot_totals,
-    pds_scot %>% filter(age_grp_2 != "Unknown") %>% group_by(geog, fy, age_grp_2) %>% summarise(total_referrals = sum(referrals))
-)
-
-pds_scot_totals_2$age_grp_2<- factor(pds_scot_totals_2$age_grp_2, levels = c("All", "65+", "64 and Under"))
-
-
-
-#create year lists
-provisional_year <- paste0(as.numeric(substr(last(finalised_years),1,4)) + 1,
-                           "/", as.numeric(substr(last(finalised_years),6,7)) + 1)
-
-current_fy <- paste0(substr(fy,1,4),
-                           "/", as.numeric(substr(fy,3,4)) + 1)
-
-last_full_year <- if_else(qt == 4, current_fy, paste0(as.numeric(substr(fy,1,4)) - 1,
-                           "/", as.numeric(substr(fy,3,4))))
-
-all_years <- unique(pds_all$fy)
-
-if(qt == 4){full_years = all_years}else{full_years = all_years[-length(all_years)]}
-
-
-```
-
-<script>
-
-var pds_year = "`r current_fy`";
-
-var ldp_year = "`r last_full_year`";
-
-</script>
-
-<!-- delete all of above when finished testing -->
-
-
 PDS Pathways
 =================================================
 
@@ -157,24 +13,6 @@ wait_data$fy <- as.factor(wait_data$fy)
 wait_data$simd <- as.factor(wait_data$simd)
 wait_data$sex <- as.factor(wait_data$sex)
 wait_data$ijb <- as.factor(wait_data$ijb)
-
-# term_data_contact$health_board <- as.factor(term_data_contact$health_board)
-# term_data_contact$fy <- as.factor(term_data_contact$fy)
-# term_data_contact %<>% arrange(termination_or_transition_reason)
-# term_data_contact$sex <- as.factor(term_data_contact$sex)
-# term_data_contact$ijb <- factor(term_data_contact$ijb, levels = unique(pds_all$geog))
-# term_data_contact %<>% mutate(termination_or_transition_reason = if_else(termination_or_transition_reason == "14 All reasons", substring(termination_or_transition_reason, 4), termination_or_transition_reason))
-# term_data_contact$termination_or_transition_reason <- as.factor(term_data_contact$termination_or_transition_reason)
-
-term_data_no_contact <- read_rds(get_mi_data_path("wait_data_3", ext = "rds", test_output = test_output))
-
-term_data_no_contact$health_board <- as.factor(term_data_no_contact$health_board)
-term_data_no_contact$fy <- as.factor(term_data_no_contact$fy)
-term_data_no_contact %<>% arrange(termination_or_transition_reason)
-term_data_no_contact$sex <- as.factor(term_data_no_contact$sex)
-term_data_no_contact$ijb <- factor(term_data_no_contact$ijb, levels = unique(pds_all$geog))
-term_data_no_contact %<>% mutate(termination_or_transition_reason = if_else(termination_or_transition_reason == "14 All reasons", substring(termination_or_transition_reason, 4), termination_or_transition_reason))
-term_data_no_contact$termination_or_transition_reason <- as.factor(term_data_no_contact$termination_or_transition_reason)
 
 #load uptake decision data
 uptake_data <- read_rds(get_mi_data_path("uptake_data", ext = "rds", test_output = test_output))
@@ -228,7 +66,7 @@ This page provides information on the pathways from dementia diagnosis to first 
 
 The Integration Authority Areas and Health Boards tabs include a chart and table showing the median number of days between diagnosis and contact for each geographical area by financial year.  
 
-The Trend tab includes a chart and table showing the trend of the median days between diagnosis and contact by financial year for Scotland, Integration Authority Areas and Health Boards. Multiple geographies can be selected. 
+The Trend tab includes a chart and table showing the trend of the median days between diagnosis and contact by financial year for Scotland, Integration Authority Areas and Health Boards. Multiple areas can be selected. 
 
 The Waiting Times Breakdown tab provides a table showing the number of referrals, percentage of referrals allocated and contacted by PDS practitioner, and the median number of days between each stage of the pathway. The figures presented here will be reflective of how local services and systems are set up, e.g. referral date and/or date of allocation to a PDS practitioner may be recorded at the same time as the diagnosis.  
 
@@ -238,7 +76,7 @@ The Waiting Times Breakdown tab provides a table showing the number of referrals
 `r if(qt != 4) {HTML("<br>")}`
 **Please note:** *Aberdeen City Health & Social Care Partnership changed to provide PDS in 2019 to an inhouse hybrid model. This change in model, and process of receiving referrals and recording, resulted in data quality issues for financial years 2019/20 and 2020/21. This should be taken into account when interpreting figures for Aberdeen City and NHS Grampian.*
 
-Row {.tabset data-height=1180}
+Row {.tabset data-height=1220}
 ----------------------------------------------------------------------
 
 ### **Integration Authority Areas**
@@ -312,7 +150,7 @@ median_ijb_table <- SharedData$new(median_ijb_table_data, key = ~fy, group = "me
 
 
 bscols(widths = 12,
-       div(style = css(width="97%", height="450px", margin="20px"),
+       div(style = css(width="97%", height="660px", margin="20px"),
 DT::datatable(median_ijb_table, rownames = FALSE, extensions = "FixedColumns",
                caption = htmltools::tags$caption(
                        style = 'caption-side: bottom; text-align: left;',
@@ -399,7 +237,7 @@ median_hb_table <- SharedData$new(median_hb_table_data, key = ~fy, group = "medi
 
 
 bscols(widths = 12,
-       div(style = css(width="97%", height="450px", margin="20px"),
+       div(style = css(width="97%", height="660px", margin="20px"),
 DT::datatable(median_hb_table, rownames = FALSE, extensions = "FixedColumns",
               caption = htmltools::tags$caption(
                        style = 'caption-side: bottom; text-align: left;',
@@ -454,30 +292,7 @@ data_filter_wait_trend,NULL)
 <h2 style="margin-left: 70px; margin-top: 0px; margin-bottom: 0px">Average (median) days from diagnosis to first contact by PDS practitioner</h2>
 ```{r plot-wait-trend}
 
-  wait_plot_trend <- #plot_trend(wait_data_trend, median_diagnosis_to_contact, x ="Financial Year of Diagnosis", y = "Median Wait (days)", colours = phs_colours_46, measure_text = "Average (median) days from diagnosis to first contact: ")
-plotly_trend_median(wait_data_trend)
-  #       x = ~fy, y = ~median_diagnosis_to_contact, 
-  #       hovertext = ~geog,
-  #       type = 'scatter', mode = "lines+markers", color = ~geog, colors = phs_colours_46,
-  #       hovertemplate = paste0("%{hovertext} <br>", "%{x} <br>", 
-  #                              "Average (median) days from diagnosis to first contact: %{y}<extra></extra>")
-  #     ) %>% 
-  # layout(clickmode = "none", showlegend = TRUE, legend = list(orientation = 'h', xanchor = "center", x = 0.5, y = -0.3),
-  #        margin = list(l = -5, b = 10, t = 40),
-  #        xaxis = list(title = "Financial Year of Diagnosis", showline = FALSE, linecolor = "#b3b3b3",
-  #                     categoryorder = "trace", tickangle = -45, titlefont = list(size = 16)
-  #                     ),
-  #        yaxis = list(title = "Median Wait (days)", linecolor = "#b3b3b3", titlefont = list(size = 16), 
-  #                     rangemode = "tozero")
-  # ) %>%
-  # config(displayModeBar = TRUE, doubleClick = F,
-  #        modeBarButtonsToRemove = list('select2d', 'lasso2d', 'zoomIn2d', 
-  #                                      'zoomOut2d', 'autoScale2d', 
-  #                                      'toggleSpikelines', 
-  #                                      'hoverCompareCartesian', 
-  #                                      'hoverClosestCartesian', 'toImage'), 
-  #        displaylogo = F, editable = F)
-
+  wait_plot_trend <- plotly_trend_median(wait_data_trend)
 
 bscols(widths = 12,
         div(style = css(width="98%", height="385px"),
@@ -489,25 +304,11 @@ wait_plot_trend)
 wait_data_trend_table <-
 wait_data_trend_all %>% arrange(geog) %>% 
               mutate(median_diagnosis_to_contact = if_else(median_diagnosis_to_contact < 0, "-", as.character(median_diagnosis_to_contact))) %>% 
-           # mutate(median_diagnosis_to_contact = 
-             # if_else(geog == "Aberdeen City" & fy %in% c("2019/20", "2020/21"), "-", median_diagnosis_to_contact)) %>% 
-          #  mutate(median_diagnosis_to_contact = 
-             # if_else(geog == "NHS Grampian" & fy %in% c("2019/20", "2020/21"), "-", median_diagnosis_to_contact)) %>%           
   pivot_wider(names_from = fy, values_from = median_diagnosis_to_contact) %>%
-            rename(`Integration Authority Area/Health Board` = geog)# %>%
-            #kable(align = c("l", rep("r", length(all_years)))) %>%
-            #kable_styling(full_width = TRUE) %>%
-            #column_spec(1, bold = TRUE) %>%
-  # Add header above table
-            #add_header_above(
-                   # c(" " = 1,
-                 #    "Financial Year of Diagnosis" = length(all_years))) %>%
-  # add_footnote(label = "A dash (\\-) indicates that this measure could not be calculated due to data quality issues.") %>% 
-           # scroll_box(height = "470px")
-
-
+            rename(`Integration Authority Area/Health Board` = geog)
+            
 bscols(widths = 12,
-       div(style = css(width="97%", height="580px", margin="20px"),
+       div(style = css(width="97%", height="615px", margin="20px"),
     DT::datatable(wait_data_trend_table, rownames = FALSE,  
                                        caption = htmltools::tags$caption(
                        style = 'caption-side: bottom; text-align: left;',
@@ -680,7 +481,7 @@ The Exempt tab includes a table showing the percentage of total referrals and nu
 `r if(qt != 4) {HTML("<br>")}`
 **Please note:** *Aberdeen City Health & Social Care Partnership changed to provide PDS in 2019 to an inhouse hybrid model. This change in model, and process of receiving referrals and recording, resulted in data quality issues for financial years 2019/20 and 2020/21. This should be taken into account when interpreting figures for Aberdeen City and NHS Grampian.*
 
-Row {.tabset data-height=790}
+Row {.tabset data-height=800}
 ----------------------------------------------------------------------
 
 ### **LDP Standard Not Met**
@@ -742,13 +543,12 @@ headers_notmet <- htmltools::withTags(table(
 ))
 
 bscols(widths = 12,
-       div(style = css(width="97%", height="575px", margin="20px"),
+       div(style = css(width="97%", height="605px", margin="20px"),
     DT::datatable(not_met_table_data, container = headers_notmet,
                          rownames = FALSE,
-                         # caption = htmltools::tags$caption(
-                         # style = 'caption-side: bottom; text-align: left;',
-                         # "A dash (-) indicates no dates of referral were submitted for diagnoses in this
-                         #      year."),
+                          caption = htmltools::tags$caption(
+                          style = 'caption-side: bottom; text-align: left;',
+                          "PDS terminated without contact includes those with a termination date recorded at any time after diagnosis."),
                          options = list(pageLength = 46,
                                         scrollX = FALSE,
                                         scrollY = TRUE,
@@ -823,7 +623,7 @@ headers_ongoing <- htmltools::withTags(table(
 ))
 
 bscols(widths = 12,
-       div(style = css(width="97%", height="580px", margin="20px"),
+       div(style = css(width="97%", height="605px", margin="20px"),
     DT::datatable(ongoing_table_data, container = headers_ongoing, rownames = FALSE,
                                        # caption = htmltools::tags$caption(
                       # style = 'caption-side: bottom; text-align: left;',
@@ -885,7 +685,7 @@ exempt_table_data <- SharedData$new(exempt_data_totals)
 ```{r exempt-table}
 
 bscols(widths = 12,
-       div(style = css(width="97%", height="585px", margin="20px"),
+       div(style = css(width="97%", height="620px", margin="20px"),
     DT::datatable(exempt_table_data, rownames = FALSE,
                                        # caption = htmltools::tags$caption(
                       # style = 'caption-side: bottom; text-align: left;',
@@ -960,7 +760,7 @@ This page includes a table showing the percentage of total referrals where ‘PD
 `r if(qt != 4) {HTML("<br>")}`
 **Please note:** *Aberdeen City Health & Social Care Partnership changed to provide PDS in 2019 to an inhouse hybrid model. This change in model, and process of receiving referrals and recording, resulted in data quality issues for financial years 2019/20 and 2020/21. This should be taken into account when interpreting figures for Aberdeen City and NHS Grampian.*
 
-Row {.tabset data-height=920}
+Row {.tabset data-height=820}
 ----------------------------------------------------------------------
 
 ### **Integration Authority Areas**
@@ -1013,14 +813,12 @@ bscols(widths = c(1,5,NA),
 <h2 style="margin-left: 30px; margin-top: 0px; margin-bottom: 0px"> Referrals by PDS Uptake Decision; Integration Authority Areas</h2>
 ```{r table-uptake-ijb}
 
-
-
 bscols(widths = 12,
-       div(style = css(width="98%", height="710px", margin="15px"),
+       div(style = css(width="98%", height="650px", margin="15px"),
           DT::datatable(table_ijb_uptake, rownames = FALSE,
-                       # caption = htmltools::tags$caption(
-                      # style = 'caption-side: bottom; text-align: left;',
-                       #"A dash (-) indicates that due to data quality issues this measure could not be calculated."),
+                        caption = htmltools::tags$caption(
+                       style = 'caption-side: bottom; text-align: left;',
+                       "A dash (-) indicates that due to data quality issues this measure could not be calculated."),
               options = list(pageLength = 32,
                              scrollX = FALSE,
                              scrollY = TRUE,
@@ -1064,23 +862,6 @@ bscols(widths = 12,
    rename("Health Board" = "geog")
 
 
-
-
- # table_hb_uptake_data <- uptake_data %>% 
- #      filter(age_grp_2 == "All", simd == "All") %>% 
- #      filter(ijb == "All" | ijb == "Scotland") %>% 
- #      pivot_wider(names_from = pds_uptake_decision, values_from = referrals) %>% 
- #      mutate(across(where(is.numeric), ~ replace(., is.na(.), 0))) %>% 
- #      adorn_totals("col") %>% 
- #      select(3,1,10,6,7,8,9) %>% 
- #      rowwise() %>% 
- #  mutate(perc_accepted = paste0(round(sum(c_across(4:5))/sum(c_across(3))*100,1), "%")) %>%   
- #      mutate(across(where(is.numeric), ~format(., big.mark = ","))) %>% 
- #  rename("Number of People Referred to PDS" = "Total", 
- #             "Health Board" = "health_board",
- #             "% Accepted (includes those initially declined)" = "perc_accepted")
-
-
 table_hb_uptake <- SharedData$new(table_hb_uptake_data)
 
 data_filter_uptake_hb <- filter_select(id = "filter_uptake_hb_year",
@@ -1100,7 +881,7 @@ bscols(widths = c(1,5,NA),
 ```{r table-uptake-hb}
 
 bscols(widths = 12,
-       div(style = css(width="98%", height="710px", margin="15px"),
+       div(style = css(width="98%", height="625px", margin="15px"),
           DT::datatable(table_hb_uptake, rownames = FALSE,
               options = list(pageLength = 15,
                              scrollX = FALSE,
@@ -1163,7 +944,7 @@ This page provides tables for Scotland, Integration Authority Areas and Health B
 
 the number of individuals and percentage of total referrals with no contact date recorded within 12 months of diagnosis; 
 
-the number and percentage of total referrals whose PDS was ended with no contact date recorded, including those exempt from the LDP Standard. 
+the number and percentage of total referrals whose PDS was ended with no contact date recorded, excluding those exempt from the LDP Standard. 
 
 *The figures shown for `r provisional_year` onwards are currently provisional and subject to change in future versions of this report.*
 
@@ -1171,26 +952,20 @@ the number and percentage of total referrals whose PDS was ended with no contact
 `r if(qt != 4) {HTML("<br>")}`
 **Please note:** *Aberdeen City Health & Social Care Partnership changed to provide PDS in 2019 to an inhouse hybrid model. This change in model, and process of receiving referrals and recording, resulted in data quality issues for financial years 2019/20 and 2020/21. This should be taken into account when interpreting figures for Aberdeen City and NHS Grampian.*
 
-Row {.tabset data-height=680}
+Row {.tabset data-height=930}
 ----------------------------------------------------------------------
 
 ### **Integration Authority Areas**
 
 ```{r dropdown-no-contact-ijb}
-
-no_contact_term_ijb <- term_data_no_contact %>%  
-    filter(sex == "All", termination_or_transition_reason == "All reasons", ldp == "All") %>%
-    filter(!grepl("NHS", ijb)) %>% 
-    pivot_wider(names_from = ldp, values_from = c(referrals, median_referral_to_termination)) %>%
-    select(fy, ijb,
-           referrals_All) %>% rename(referrals_no_contact_term = referrals_All)
-    
 totals_ijb <- wait_data %>% filter(sex == "All", simd == "All", ijb != "All" | ijb == "Scotland") %>% select(ijb, fy, total_referrals)
 
 no_contact_12_ijb <- pds_all %>% filter(!grepl("NHS", geog), ldp_full == "fail - PDS not started and more than 12 months since diagnosis" | ldp_full == "fail - PDS started more than 12 months after diagnosis") %>% 
    group_by(fy, geog) %>% summarise(referrals_no_contact_12 = sum(referrals)) %>% rename(ijb = geog)
  
 ijb_totals_12 <- left_join(totals_ijb, no_contact_12_ijb)
+
+no_contact_term_ijb <- pds_all %>% filter(!grepl("NHS", geog), ldp_full == "fail - PDS terminated before first contact") %>% group_by(fy, geog) %>% summarise(referrals_no_contact_term = sum(referrals)) %>% rename(ijb = geog)
 
 no_contact_ijb <- left_join(ijb_totals_12, no_contact_term_ijb) %>% 
   mutate(across(starts_with("referrals"), ~ replace(., is.na(.), 0))) %>%
@@ -1233,10 +1008,11 @@ data_filter_year_no_contact_ijb, NULL)
 ```{r no-contact-table-ijb}
 
 bscols(widths = 12,
-       div(style = css(width="97%", height="500px", margin="20px"),
+       div(style = css(width="97%", height="750px", margin="20px"),
      DT::datatable(no_contact_table_data_ijb, rownames = FALSE, caption = htmltools::tags$caption(
                        style = 'caption-side: bottom; text-align: left;',
-                       "A dash (-) indicates that this measure could not be calculated due to data quality issues. Referrals not contacted within 12 months of diagnosis includes records with no contact date and those with a contact date more than 12 months after diagnosis."),
+                       "A dash (-) indicates that this measure could not be calculated due to data quality issues. Referrals not contacted within 12 months of diagnosis includes records with no contact date and those with a contact date more than 12 months after diagnosis, but does not include those with a termination date. Number of referrals whose PDS ended with no contact includes those with a termination date recorded at any time after diagnosis.
+"),
               options = list(pageLength = 33,
                              scrollX = FALSE,
                              scrollY = TRUE,
@@ -1258,19 +1034,14 @@ bscols(widths = 12,
 
 ```{r dropdown-no-contact-hb}
 
-no_contact_term_hb <- term_data_no_contact %>%  
-    filter(sex == "All", termination_or_transition_reason == "All reasons", ldp == "All") %>%
-    filter(ijb == "Scotland" | grepl("NHS", ijb)) %>% 
-    pivot_wider(names_from = ldp, values_from = c(referrals, median_referral_to_termination)) %>%
-    select(fy, health_board,
-           referrals_All) %>% rename(referrals_no_contact_term = referrals_All)
-    
 totals_hb <- wait_data %>% filter(sex == "All", simd == "All", ijb == "All" | ijb == "Scotland") %>% select(health_board, fy, total_referrals)
 
 no_contact_12_hb <- pds_all %>% filter(geog == "Scotland" | grepl("NHS", geog), ldp_full == "fail - PDS not started and more than 12 months since diagnosis" | ldp_full == "fail - PDS started more than 12 months after diagnosis") %>% 
    group_by(fy, geog) %>% summarise(referrals_no_contact_12 = sum(referrals)) %>% rename(health_board = geog)
  
 hb_totals_12 <- left_join(totals_hb, no_contact_12_hb)
+
+no_contact_term_hb <- pds_all %>% filter(geog == "Scotland" | grepl("NHS", geog), ldp_full == "fail - PDS terminated before first contact") %>% group_by(fy, geog) %>% summarise(referrals_no_contact_term = sum(referrals)) %>% rename(health_board = geog)
 
 no_contact_hb <- left_join(hb_totals_12, no_contact_term_hb) %>% 
   mutate(across(starts_with("referrals"), ~ replace(., is.na(.), 0))) %>%
@@ -1309,10 +1080,11 @@ data_filter_year_no_contact_hb, NULL)
 <h2 style="margin-left: 30px; margin-top: 0px; margin-bottom: -20px">Individuals referred to PDS not contacted within 12 months of diagnosis; Health Boards</h2>
 ```{r no-contact-table-hb}
 bscols(widths = 12,
-       div(style = css(width="97%", height="500px", margin="20px"),
+       div(style = css(width="97%", height="750px", margin="20px"),
      DT::datatable(no_contact_table_data_hb, rownames = FALSE, caption = htmltools::tags$caption(
                        style = 'caption-side: bottom; text-align: left;',
-                       "A dash (-) indicates insufficient data for this measure to be calculated. Referrals not contacted within 12 months of diagnosis includes records with no contact date and those with a contact date more than 12 months after diagnosis."),
+                       "A dash (-) indicates that this measure could not be calculated due to data quality issues. Referrals not contacted within 12 months of diagnosis includes records with no contact date and those with a contact date more than 12 months after diagnosis, but does not include those with a termination date. Number of referrals whose PDS ended with no contact includes those with a termination date recorded at any time after diagnosis.
+"),
               options = list(pageLength = 15,
                              scrollX = FALSE,
                              scrollY = TRUE,
@@ -1329,82 +1101,4 @@ bscols(widths = 12,
      )
 
 ```
-
-
-```{js }
-
-function filter_default() {
-
-
-  document.getElementById("not_met_filter_year").getElementsByClassName("selectized") 
-  [0].selectize.setValue(pds_year, false);
-
-  document.getElementById("not_met_filter_year").getElementsByClassName("selectized")
-  [0].selectize.removeOption("");
-  
-   document.getElementById("ongoing_filter_year").getElementsByClassName("selectized") 
-  [0].selectize.setValue(pds_year, false);
-
-  document.getElementById("ongoing_filter_year").getElementsByClassName("selectized")
-  [0].selectize.removeOption("");
-  
-  document.getElementById("exempt_filter_year").getElementsByClassName("selectized") 
-  [0].selectize.setValue(pds_year, false);
-
-  document.getElementById("exempt_filter_year").getElementsByClassName("selectized")
-  [0].selectize.removeOption("");
-  
-  document.getElementById("wait_filter_all_year").getElementsByClassName("selectized") 
-  [0].selectize.setValue(pds_year, false);
-
-  document.getElementById("wait_filter_all_year").getElementsByClassName("selectized")
-  [0].selectize.removeOption("");
-  
-  document.getElementById("filter_median").getElementsByClassName("selectized") 
-  [0].selectize.setValue(pds_year, false);
-
-  document.getElementById("filter_median").getElementsByClassName("selectized")
-  [0].selectize.removeOption("");
-  
-  document.getElementById("filter_median_hb").getElementsByClassName("selectized") 
-  [0].selectize.setValue(pds_year, false);
-
-  document.getElementById("filter_median_hb").getElementsByClassName("selectized")
-  [0].selectize.removeOption("");
-  
-  document.getElementById("trend_filter_wait").getElementsByClassName("selectized") 
-  [0].selectize.setValue("Scotland", false);
-
-  document.getElementById("trend_filter_wait").getElementsByClassName("selectized")
-  [0].selectize.removeOption("");
-  
-  document.getElementById("filter_uptake_hb_year").getElementsByClassName("selectized") 
-  [0].selectize.setValue(pds_year, false);
-
-  document.getElementById("filter_uptake_hb_year").getElementsByClassName("selectized")
-  [0].selectize.removeOption("");
-  
-  document.getElementById("filter_uptake_ijb_year").getElementsByClassName("selectized") 
-  [0].selectize.setValue(pds_year, false);
-
-  document.getElementById("filter_uptake_ijb_year").getElementsByClassName("selectized")
-  [0].selectize.removeOption("");
-  
-  document.getElementById("no_contact_filter_year_hb").getElementsByClassName("selectized") 
-  [0].selectize.setValue(pds_year, false);
-
-  document.getElementById("no_contact_filter_year_hb").getElementsByClassName("selectized")
-  [0].selectize.removeOption("");
-  
-   document.getElementById("no_contact_filter_year_ijb").getElementsByClassName("selectized") 
-  [0].selectize.setValue(pds_year, false);
-
-  document.getElementById("no_contact_filter_year_ijb").getElementsByClassName("selectized")
-  [0].selectize.removeOption("");
-
- 
-  }
-  
-  $(document).ready(filter_default);
-
-```
+<!-- END OF SCRIPT -->
