--- a/management-report/markdown/subpage-trends.Rmd
+++ b/management-report/markdown/subpage-trends.Rmd
@@ -69,7 +69,7 @@ Row
 
 ### **Note**
 
-This page includes a chart and table showing the trend for number of people referred to PDS by financial year for Scotland, Integration Authority Areas and Health Boards. Multiple Geographies can be selected in the Integration Authority and Health Board tabs. 
+This page includes a chart and table showing the trend for number of people referred to PDS by financial year for Scotland, Integration Authority Areas and Health Boards. Multiple areas can be selected in the Integration Authority and Health Board tabs. 
 
 `r if(qt != 4) {div(style = css(fontStyle="italic"),paste0("For diagnoses in financial year ", current_fy, " data is available up to and including Q", qt, "."))}`
 
@@ -247,7 +247,7 @@ This page includes rates of the number of people referred to PDS per 10,000 popu
 
 The Integration Authority Area and Health Board tabs include a chart and table showing the rate for each geographical area by financial year.  
 
-The Trend tab includes a chart and table showing the trend of the rate by financial year for Scotland, Integration Authority Areas and Health Boards. Multiple geographies can be selected.  
+The Trend tab includes a chart and table showing the trend of the rate by financial year for Scotland, Integration Authority Areas and Health Boards. Multiple areas can be selected.  
 
 `r if(qt != 4) {div(style = css(fontStyle="italic"),paste0("For diagnoses in financial year ", current_fy, " data is available up to and including Q", qt, "."))}`
 
@@ -436,7 +436,7 @@ Row
 
 ### **Note**
 
-This page includes charts and tables showing, for the selected geographies, the trend by financial year for information relating to the LDP Standard.  
+This page includes charts and tables showing, for the selected areas, the trend by financial year for information relating to the LDP Standard.  
 
 The first tab shows the percentage of the estimated number of people newly diagnosed with dementia that have been referred to PDS for Scotland and Health Boards (estimates are not available for Integration Authority Areas). 
 
