notes update of lanarkshire fife and borders

--- a/management-report/markdown/subpage-hb.Rmd
+++ b/management-report/markdown/subpage-hb.Rmd
@@ -170,7 +170,7 @@ est_date4 <- dmy(01042024)
               "*PHS have identified one record submitted by NHS Fife ", 
               "for 2024/25 that shows inconsistent dates. The reported dates resulted in this record ",
               "showing as having met the standard. PHS have queried the ", 
-              "dates with the Health Board and are awaiting a response.*"),  TRUE ~ paste0(""))
+              "dates with the Health Board and are expecting these to be rectified in future submissions.*"),  TRUE ~ paste0(""))
   
      # Data quality notes - borders
   bord_date <- dmy(01042024)
@@ -182,7 +182,7 @@ est_date4 <- dmy(01042024)
               "*PHS have identified one record submitted by NHS Borders ", 
               "for 2024/25 that shows inconsistent dates. The reported dates resulted in this record ",
               "showing as having met the standard. PHS have queried the ", 
-              "dates with the Health Board and are awaiting a response.*"), TRUE ~ paste0(""))
+              "dates with the Health Board and are expecting these to be rectified in future submissions.*"), TRUE ~ paste0(""))
   
      # Data quality notes - lanarkshire
   lan_date <- dmy(01042024)
@@ -194,7 +194,7 @@ est_date4 <- dmy(01042024)
               "*PHS have identified two records submitted by NHS Lanarkshire ", 
               "for 2024/25 that show inconsistent dates. The reported dates resulted in these records ",
               "showing as having met the standard. PHS have queried the ", 
-              "dates with the Health Board and are awaiting a response.*"),  TRUE ~ paste0(""))
+              "dates with the Health Board and are expecting these to be rectified in future submissions.*"),  TRUE ~ paste0(""))
 
 
 ```
